# PatternShelf

./: .gitignore  CMakeLists.txt  README.md
packaging/: jesterpatternshelf.desktop  patternshelf.desktop
scripts/: build-appimage.sh
src/: main.cpp
